force-app/main/default/objects/Account/fields/Count_Number_Of_Childs__c.field-meta.xml
<CustomField>
    <fullName>Count_Number_Of_Childs__c</fullName>
    <label>Count Number Of Childs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>