force-app/main/default/objects/Account/fields/Delivery_types__c.field-meta.xml
<CustomField>
    <fullName>Delivery_types__c</fullName>
    <label>Delivery types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rating</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>