force-app/main/default/objects/Account/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <label>EMail</label>
    <type>Email</type>
</CustomField>