force-app/main/default/objects/Account/fields/High_Priority_Case__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High Priority Case</label>
    <referenceTo>High_Priority_Case__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>