force-app/main/default/objects/Account/fields/send_Email_Birthday_Boy__c.field-meta.xml
<CustomField>
    <fullName>send_Email_Birthday_Boy__c</fullName>
    <label>send Email Birthday Boy</label>
    <type>Email</type>
</CustomField>