force-app/main/default/objects/Account/recordTypes/Deliver_Status.recordType-meta.xml
<RecordType>
    <fullName>Deliver_Status</fullName>
    <active>true</active>
    <label>Deliver Status</label>
</RecordType>